Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19008

ATL: <atlimage.h> and class CImage is not compatible

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • SDK, Win32SS
    • None

    Description

      2023-06-25

      Our <atlimage.h> and class CImage implementation is incompatible with MS.

      Our MSPAINT relies on the wrong implementation.

      We need to investigate the interface of <atlimage.h> without seeing the MS sources/headers directly.

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              katayama_hirofumi_mz Katayama Hirofumi MZ
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: